# microbetag

./: .gitignore  Dockerfile  Dockerfile.microbetag_base  Gemfile  README.md  _config.yml  build_cx_annotated_graph.py  config.py  config.yml  index.md  installation.sh  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  microbetag.py  notes.md  pyproject.toml  requirements.txt  sn-bibliography.bib  study_notes.md  utils.py  version.yml
_includes/: head.html
_layouts/: default.html
_site/: 404.html  index.html
app/: app.py  cytoscape_selectors.py  microbetag-job.yml  microbetag.cwl  test.py
docs/: api.md  configuration.md  cytoApp.md  faq.md  input.md  modules.md  python.md  use_case.md
download/: config.yml  edgelist.tsv  seq_ab_tab.tsv
input/: HMP_SRA_gut_small.tsv
mappings/: overview_of_avail_genomes.py
microbetag/: README.md  __init__.py  __main__.py  microbetag_base.py
microbetagDB/: README.md  microbetagDB.sql  net_cooperate.py
output/: README.md
preprocess/: Dockerfile  classify.R  flashweave.jl  prep.py
ref-dbs/: README.md  get_kegg_modules_definitions.py  module_definition_map.json
test/: config.yml  test.csv  test.tsv
tests/: config-cont.yml  dada2_use_case.tsv  dada2_use_case.tsv.json  k__taxonomy_asv.tsv  mapping_file.txt  otu_table_silva132_partial.tsv  qiime2_use_case.tsv  qiime2_use_case.tsv.json  table.from_biom_w_taxonomy.txt
utils/: __init__.py  arguments.py  faprotax_annotations.py  logger.py  net_cooperate.py  parse_module_definitions.py  parse_otu_table.py  pathway_complementarity.py  utils.py  (+1 more)
(+292 files in other folders)
