[tool.poetry]
name = "microbetag"
version = "0.1.0"
description = "annotating microbial co-occurrence networks"
authors = ["Haris Zafeiropoulos <haris.zafeiropoulos@kuleuven.be>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.33"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
